	check for term->set_color before trying to call it.  It also makes the
	behavior of non-RGB terminals more consistent, although still imperfect.

	* src/graph3d.c src/boundary.c:  Don't try to use opaque (background)
	fill if the terminal does not support RGB colors.

	* src/graph3d.c: Always color contour lines via set_color, even for
	terminals that do not support RGB colors.
	Bug #1284

2013-09-20  Per Persson  <persquare@users.sourceforge.net>

	* configure.in m4/apple.m4 src/term.c src/term.h:
	Modify configuration tests to look for aquaterm as a framework rather
	than as a library.

2013-09-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Initialize histogram_opts to HT_CLUSTERED.
	Bug #1285

	* src/graphics.c (place_grid):  Must initialize tic_direction when
	drawing r-axis tics.  Otherwise we get whatever the last set of 
	x or y tics used, or if they have not been used then nothing at all.
	Bug #1286

	* src/boundary.c (draw_key) src/graph3d.c (do_3dplot):
	If the terminal doesn't support term->set_color() then we can't
	background-fill an opaque key box.

2013-09-17  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_point): filled circles (pointtype 7) were
	incorrectly being drawn with a black border.

	* src/plot2d.c (polar_range_fiddling):  In a polar mode plot, if x, y,
	and r are all auto-scaled then prefer a symmetric plot centered at the
	orgin with radius rmax over an asymmetric plot produced by treating the
	data ranges on x and y independently.

	* src/util.c (equals almost_equals):  Additional sanity checking of
	c_token on entry.

2013-09-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_push) src/parse.c src/parse.h src/command.c:
	The routine try_to_get_string() was intended to safely return FALSE if
	the current syntax cannot be evaluated as a string.  But f_push()
	triggered a fatal error if an unrecognized token was encountered during